<resources>
    <string name="app_name">Remote Numpad</string>
    <string name="title_activity_settings">Settings</string>

    <!-- The labels of the buttons -->
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>

    <!-- Status messages -->
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_disconnecting">Disconnecting…</string>
    <string name="status_connection_lost">Connection lost</string>
    <string name="status_could_not_connect">Could not connect</string>

    <!-- Snackbar messages -->
    <string name="snackbar_no_host_selected">No host selected</string>
    <string name="snackbar_invalid_connection_interface">Invalid connection interface</string>
    <string name="snackbar_invalid_host">Invalid host</string>
    <string name="snackbar_incompatible_device">Incompatible device</string>
    <string name="snackbar_pairing_in_progress">Pairing in progress, please wait</string>
    <string name="snackbar_scan_failed">The scan failed, please try again</string>
    <string name="snackbar_pairing_in_postprogress">Finalizing pairing, please wait</string>
    <string name="snackbar_pairing_interrupted">
        Pairing was interrupted. This app may not work as intended.
    </string>
    <string name="snackbar_pairing_failed">
        Pairing configuration failed. This app may not work as intended.
    </string>
    <string name="snackbar_pairing_successful">Pairing complete</string>

    <!-- The "non-translateable" keys on the numpad -->
    <string name="key_0" translatable="false">0</string>
    <string name="key_1" translatable="false">1</string>
    <string name="key_2" translatable="false">2</string>
    <string name="key_3" translatable="false">3</string>
    <string name="key_4" translatable="false">4</string>
    <string name="key_5" translatable="false">5</string>
    <string name="key_6" translatable="false">6</string>
    <string name="key_7" translatable="false">7</string>
    <string name="key_8" translatable="false">8</string>
    <string name="key_9" translatable="false">9</string>
    <string name="key_add" translatable="false">+</string>
    <string name="key_divide" translatable="false">/</string>
    <string name="key_multiply" translatable="false">*</string>
    <string name="key_subtract" translatable="false">-</string>
    <string name="key_equal" translatable="false">=</string>

    <!-- The values for the "translateable" keys on the numpad -->
    <string name="key_value_enter" translatable="false">enter</string>
    <string name="key_value_decimal" translatable="false">.</string>
    <string name="key_value_numlock" translatable="false">numlock</string>
    <string name="key_value_backspace" translatable="false">backspace</string>

    <!-- The labels for the "translateable" keys on the numpad -->
    <string name="key_label_enter">enter</string>
    <string name="key_label_decimal">.</string>
    <string name="key_label_numlock">num lock</string>
    <string name="key_label_backspace">back space</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->

    <string name="pref_socket_entry_value" translatable="false">socket</string>
    <string name="pref_socket_entry">Socket/WiFi (requires server)</string>

    <string name="pref_bluetooth_entry_value" translatable="false">bluetooth</string>
    <string name="pref_bluetooth_entry">Bluetooth (with server)</string>

    <string name="pref_hid_entry_value" translatable="false">hid</string>
    <string name="pref_hid_entry">Bluetooth</string>

    <string name="pref_key_connection_interface" translatable="false">connection_interface</string>
    <string name="pref_title_connection_interface">Connection interface</string>

    <string-array name="pref_connection_interface_values">
        <item>@string/pref_hid_entry_value</item>
        <item>@string/pref_bluetooth_entry_value</item>
        <item>@string/pref_socket_entry_value</item>
    </string-array>

    <string-array name="pref_connection_interface_titles">
        <item>@string/pref_hid_entry</item>
        <item>@string/pref_bluetooth_entry</item>
        <item>@string/pref_socket_entry</item>
    </string-array>

    <string name="pref_key_vibrations" translatable="false">vibrations</string>
    <string name="pref_title_vibrations">Vibrate on touch</string>

    <string name="pref_key_backspace" translatable="false">backspace</string>
    <string name="pref_title_backspace">\"backspace\" instead of \"numlock\"</string>

    <string name="pref_key_nosleep" translatable="false">nosleep</string>
    <string name="pref_title_nosleep">Keep the screen on</string>

    <string name="pref_key_lefty" translatable="false">lefty</string>
    <string name="pref_title_lefty">Lefty mode</string>

    <string name="pref_light_mode_entry_value" translatable="false">light</string>
    <string name="pref_light_mode_entry">Light</string>

    <string name="pref_dark_mode_entry_value" translatable="false">dark</string>
    <string name="pref_dark_mode_entry">Dark</string>

    <string name="pref_system_theme_mode_entry_value" translatable="false">default</string>
    <string name="pref_system_theme_mode_entry">System default</string>

    <string name="pref_key_theme" translatable="false">theme</string>
    <string name="pref_title_theme">Theme</string>

    <string-array name="pref_theme_values">
        <item>@string/pref_light_mode_entry_value</item>
        <item>@string/pref_dark_mode_entry_value</item>
        <item>@string/pref_system_theme_mode_entry_value</item>
    </string-array>

    <string-array name="pref_theme_titles">
        <item>@string/pref_light_mode_entry</item>
        <item>@string/pref_dark_mode_entry</item>
        <item>@string/pref_system_theme_mode_entry</item>
    </string-array>

    <!-- General host-related settings -->

    <string name="pref_title_host">Host</string>
    <string name="pref_key_host" translatable="false">host</string>

    <!-- Socket settings -->

    <string name="pref_title_category_socket">Socket/WiFi settings</string>
    <string name="pref_key_socket_host" translatable="false">socket_host</string>
    <string name="action_socket_refresh">Refresh</string>
    <string name="pref_summary_host_scanning">Scanning…</string>
    <string name="pref_key_custom_host" translatable="false">custom_host</string>
    <string name="pref_manual_host_entry">Manual entry</string>
    <string name="pref_manual_host_entry_value" translatable="false">manual</string>
    <string name="pref_manual_host_entry_default" translatable="false">192.168.1.1</string>

    <string-array name="pref_socket_host_values">
        <item>@string/pref_manual_host_entry_value</item>
    </string-array>

    <string-array name="pref_socket_host_titles">
        <item>@string/pref_manual_host_entry</item>
    </string-array>

    <!-- Bluetooth settings -->

    <string name="pref_title_category_bluetooth">Bluetooth (server) settings</string>
    <string name="pref_key_bluetooth_host" translatable="false">bluetooth_host</string>
    <string name="pref_no_host_entry">None paired</string>
    <string name="pref_no_host_entry_value" translatable="false" />

    <string-array name="pref_bluetooth_host_values">
        <item>@string/pref_no_host_entry_value</item>
    </string-array>

    <string-array name="pref_bluetooth_host_titles">
        <item>@string/pref_no_host_entry</item>
    </string-array>

    <!-- HID settings -->

    <string name="pref_title_category_hid">Bluetooth settings</string>
    <string name="pref_key_hid_host" translatable="false">hid_host</string>
    <string name="action_hid_pair">Pair</string>

    <!-- Bluetooth Permission Rationale Dialog -->

    <string name="bprd_rationale">
        In order to use the Bluetooth and Bluetooth (with server) connections, the permission to
        detect, connect to and derive location from nearby devices is required.<br />
        Rest assured that no location information is derived and the permission is only necessary
        to connect to a Bluetooth device.
    </string>
    <string name="bprd_yes">Go to permission</string>
    <string name="bprd_no">Deny</string>

</resources>
