<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        app:defaultValue="@string/pref_socket_entry_value"
        app:entries="@array/pref_connection_interface_titles"
        app:entryValues="@array/pref_connection_interface_values"
        app:key="@string/pref_key_connection_interface"
        app:title="@string/pref_title_connection_interface" />
    <CheckBoxPreference
        app:defaultValue="true"
        app:key="@string/pref_key_vibrations"
        app:title="@string/pref_title_vibrations" />
    <CheckBoxPreference
        app:defaultValue="false"
        app:key="@string/pref_key_backspace"
        app:title="@string/pref_title_backspace" />

</PreferenceScreen>
