<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_title_category_socket">

        <ListPreference
            app:defaultValue="@string/pref_no_host_entry_value"
            app:entries="@array/pref_socket_host_titles"
            app:entryValues="@array/pref_socket_host_values"
            app:key="@string/pref_key_socket_host"
            app:summary="@string/pref_manual_host_entry"
            app:title="@string/pref_title_host" />
        <EditTextPreference
            app:defaultValue="192.168.1.1"
            app:key="@string/pref_key_custom_host"
            app:singleLine="true"
            app:summary="192.168.1.1"
            app:title="@string/pref_manual_host_entry" />

    </PreferenceCategory>

</PreferenceScreen>