<?xml version="1.0" encoding="utf-8"?>
<!--
    Remote Numpad - a numpad application on Android for PCs lacking one.
    Copyright (C) 2016-2022 Guillaume Payet

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_title_category_bluetooth">

        <ListPreference
            app:defaultValue="@string/pref_no_host_entry_value"
            app:entries="@array/pref_bluetooth_host_titles"
            app:entryValues="@array/pref_bluetooth_host_values"
            app:key="@string/pref_key_bluetooth_host"
            app:summary="@string/pref_no_host_entry"
            app:title="@string/pref_title_host" />

    </PreferenceCategory>

</PreferenceScreen>