<?xml version="1.0" encoding="utf-8"?>
<!--
    Remote Numpad - a numpad application on Android for PCs lacking one.
    Copyright (C) 2016-2022 Guillaume Payet

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.guillaumepayet.remotenumpad.NumpadActivity">
    <item
        android:id="@+id/action_backspace"
        android:title="@string/pref_title_backspace"
        android:icon="@drawable/backspace"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_vibrations"
        android:title="@string/pref_title_vibrations"
        android:icon="@drawable/vibration_48px"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nosleep"
        android:title="@string/pref_title_nosleep"
        android:icon="@drawable/aod_48px"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lefty"
        android:title="@string/pref_title_lefty"
        android:icon="@drawable/flip_48px"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"
        android:icon="@drawable/settings_48px"
        app:showAsAction="ifRoom" />
</menu>
